@@ -96,6 +96,7 @@
     <addaction name="separator"/>
     <addaction name="action_Sim_SetRunParameters"/>
     <addaction name="action_Sim_Run"/>
+    <addaction name="action_Sim_Pause"/>
     <addaction name="action_Sim_Stop"/>
     <addaction name="action_Sim_SingleStep"/>
     <addaction name="separator"/>
@@ -273,18 +274,20 @@
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
    <addaction name="action_File_Load"/>
    <addaction name="action_File_Reload"/>
+   <addaction name="separator"/>
    <addaction name="action_File_SaveLog"/>
    <addaction name="action_File_Print"/>
+   <addaction name="separator"/>
    <addaction name="action_Sim_ClearRegisters"/>
    <addaction name="action_Sim_Reinitialize"/>
+   <addaction name="separator"/>
    <addaction name="action_Sim_Run"/>
+   <addaction name="action_Sim_Pause"/>
    <addaction name="action_Sim_Stop"/>
    <addaction name="action_Sim_SingleStep"/>
+   <addaction name="separator"/>
    <addaction name="action_Help_ViewHelp"/>
   </widget>
   <action name="action_File_Load">
@@ -352,6 +355,15 @@
    </property>
    <property name="shortcut">
     <string>F5</string>
+   </property>
+  </action>
+  <action name="action_Sim_Pause">
+   <property name="icon">
+    <iconset resource="windows_images.qrc">
+     <normaloff>:/icons/Pause.png</normaloff>:/icons/Pause.png</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Pause</string>
    </property>
   </action>
   <action name="action_Sim_Stop">
