@@ -1,3 +1,13 @@
+2010-10-23    <Jim@LS-RED>
+
+	* CPU/inst.c, CPU/inst.h, CPU/mem.c, CPU/run.c,
+	QtSpim/datatextedit.h, QtSpim/datawin.cpp, QtSpim/menu.cpp,
+	QtSpim/spim_support.c, QtSpim/spimview.cpp, QtSpim/spimview.h,
+	QtSpim/spimview.ui, QtSpim/textwin.cpp, QtSpm/windows_images.qrc:
+	Fixed debugger functionality by adding pause button.
+	Sped up formating of data segments.
+	Improved error messages.
+
 2010-10-10    <Jim@LS-RED>
 
 	* CPU/run.c, QtSpim/QtSpim.pro, QtSpim/README, QtSpim/spim_support.c, QtSpim/textwin.cpp
